# webgrid

./: .coveragerc  .gitignore  changelog.rst  mise.toml  noxfile.py  pyproject.toml  pytest.ini  readme.md  ruff.toml  setup.cfg  setup.py  stable-requirements.txt  tox.ini
.circleci/: config.yml
.github/actions/nox-run/: action.yaml
.github/actions/uv-setup/: action.yaml
.github/workflows/: nox.yaml  pypi.yaml
docs/: requirements.txt
docs/source/: conf.py  getting-started.rst  gotchas.rst  index.rst
docs/source/_static/css/: custom.css
docs/source/columns/: column-usage.rst  custom-columns.rst
docs/source/filters/: base-filter.rst  built-in-filters.rst  custom-filters.rst
docs/source/grid/: args-loaders.rst  built-in-columns.rst  getting-started.rst  grid.rst  types.rst
docs/source/renderers/: base-renderer.rst  built-in-renderers.rst  index.rst
docs/source/testing/: index.rst
src/webgrid/: __init__.py  extensions.py  filters.py  renderers.py  testing.py  types.py  utils.py  validators.py
src/webgrid/i18n/: webgrid.pot
src/webgrid/i18n/es/LC_MESSAGES/: webgrid.mo  webgrid.po
src/webgrid/static/i18n/es/LC_MESSAGES/: webgrid.json
src/webgrid_blazeweb_ta/config/: settings.py
src/webgrid_blazeweb_ta/model/: orm.py
src/webgrid_blazeweb_ta/tasks/: init_db.py
src/webgrid_blazeweb_ta/tests/: grids.py
src/webgrid_ta/: grids.py  helpers.py  manage.py
src/webgrid_ta/model/: __init__.py  entities.py  helpers.py
src/webgrid_tests/: conftest.py  helpers.py  test_api.py  test_cli.py  test_columns.py  test_filters.py  test_rendering.py  test_testing.py  test_unit.py
tasks/: gh-nox-sessions
webgrid/: __init__.py  blazeweb.py  extensions.py  filters.py  flask.py  renderers.py  testing.py  types.py
webgrid/i18n/es/LC_MESSAGES/: webgrid.mo
webgrid/static/: webgrid.css  webgrid.js
webgrid/templates/: grid_header.html  header_sorting.html
webgrid/tests/: conftest.py  helpers.py  test_api.py  test_blazeweb.py  test_columns.py  test_filters.py  test_rendering.py  test_testing.py  test_types.py  test_unit.py
webgrid_blazeweb_ta/config/: settings.py
webgrid_ta/: grids.py  helpers.py
webgrid_ta/model/: entities.py
