[build-system]
requires = [
    'hatchling',
    'hatch-regex-commit',
]
build-backend = 'hatchling.build'


[project]
name = 'WebGrid'
description = "A library for rendering HTML tables and Excel files from SQLAlchemy models."
authors = [
    {name = 'Level 12', email = 'devteam@level12.io'},
]
requires-python = '~=3.10.0'
dynamic = ['version']
readme = { file = "readme.rst", content-type = "text/x-rst" }
license = { text = "BSD-3-Clause" }
urls = { "homepage" = "https://github.com/level12/webgrid" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
]

# Dependencies
dependencies = [
  "BlazeUtils>=0.6.0",
  "SQLAlchemy>=1.4.20",
  "jinja2",
  "python-dateutil",
  "Werkzeug",
]

[project.optional-dependencies]
i18n = ["morphi"]

[dependency-groups]
# Note: keeping Coppy deps grouped separate from app deps should help avoid unnecessary
# conflicts when upgrading to the latest Coppy template.
dev = [
    # From Coppy:
    {include-group = "tests"},
    {include-group = "pre-commit"},
    {include-group = "audit"},
    {include-group = "nox"},
    'click',
    'hatch',
    'ruff',

    # App specific:
    # TODO: fill in app deps here
]
# Used by nox
tests = [
    # From Coppy:
    'pytest',
    'pytest-cov',

    # App specific:
    # TODO: fill in app deps here
]
# Used by nox
pre-commit = [
    # From Coppy:
    'pre-commit',
    'pre-commit-uv',
]
# Used by nox
audit = [
    # From Coppy:
    'pip-audit',
]
# Used by CI
nox = [
    'nox',
]
