[build-system]
requires = [
    'hatchling',
    'hatch-regex-commit',
]
build-backend = 'hatchling.build'


[project]
name = 'WebGrid'
description = "A library for rendering HTML tables and Excel files from SQLAlchemy models."
authors = [
    {name = 'Level 12', email = 'devteam@level12.io'},
]
requires-python = '>=3.10'
dynamic = ['version']
readme = { file = "readme.rst", content-type = "text/x-rst" }
license.file = "license.txt"
urls.homepage = "https://github.com/level12/webgrid"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
]

# Dependencies
dependencies = [
  "BlazeUtils>=0.6.0",
  "SQLAlchemy>=1.4.20",
  "jinja2",
  "python-dateutil",
  "Werkzeug",
]

[project.optional-dependencies]
i18n = ["morphi"]
tests-stable = [
    "arrow==1.3.0",
    "beautifulsoup4==4.12.3",
    "BlazeUtils==0.7.0",
    "blinker==1.8.2",
    "click==8.1.7",
    "coverage==7.6.0",
    "cssselect==1.2.0",
    "dominate==2.9.1",
    "et-xmlfile==1.1.0",
    "Flask==3.0.3",
    "Flask-Bootstrap==3.3.7.1",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-WebTest==0.1.4",
    "Flask-WTF==1.2.1",
    "greenlet==3.0.3",
    "iniconfig==2.0.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.4",
    "lxml==5.2.2",
    "MarkupSafe==2.1.5",
    "mock==5.1.0",
    "openpyxl==3.1.5",
    "packaging==24.1",
    "pluggy==1.5.0",
    "psycopg2-binary==2.9.9",
    "pyodbc==5.1.0",
    "pyquery==2.0.0",
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "python-dateutil==2.9.0.post0",
    "six==1.16.0",
    "soupsieve==2.5",
    "SQLAlchemy==2.0.31",
    "sqlalchemy-pyodbc-mssql==0.1.1",
    "SQLAlchemy-Utils==0.41.2",
    "types-python-dateutil==2.9.0.20240316",
    "typing_extensions==4.12.2",
    "visitor==0.1.3",
    "waitress==3.0.0",
    "WebOb==1.8.7",
    "WebTest==3.0.0",
    "Werkzeug==3.0.3",
    "wrapt==1.16.0",
    "WTForms==3.1.2",
    "XlsxWriter==3.2.0",
]

[dependency-groups]
# Note: keeping Coppy deps grouped separate from app deps should help avoid unnecessary
# conflicts when upgrading to the latest Coppy template.
dev = [
    # From Coppy:
    {include-group = "tests"},
    {include-group = "pre-commit"},
    {include-group = "audit"},
    {include-group = "nox"},
    'click',
    'hatch',
    'ruff',

    # App specific:
    # TODO: fill in app deps here
]
# Used by nox
tests = [
    # From Coppy:
    'pytest',
    'pytest-cov',

    # App specific:
    # TODO: fill in app deps here
]
# Used by nox
pre-commit = [
    # From Coppy:
    'pre-commit',
    'pre-commit-uv',
]
# Used by nox
audit = [
    # From Coppy:
    'pip-audit',
]
# Used by CI
nox = [
    'nox',
]
