[build-system]
requires = [
    'hatchling',
    'hatch-regex-commit',
]
build-backend = 'hatchling.build'


[project]
name = 'WebGrid'
description = "A library for rendering HTML tables and Excel files from SQLAlchemy models."
authors = [
    {name = 'Level 12', email = 'devteam@level12.io'},
]
requires-python = '>=3.10'
dynamic = ['version']
readme = { file = "readme.rst", content-type = "text/x-rst" }
license.file = "license.txt"
urls.homepage = "https://github.com/level12/webgrid"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
]

# Dependencies
dependencies = [
  "BlazeUtils>=0.6.0",
  "SQLAlchemy>=1.4.20",
  "jinja2",
  "python-dateutil",
  "Werkzeug",
]

[project.optional-dependencies]
i18n = ["morphi"]

[dependency-groups]
# Note: keeping Coppy deps grouped separate from app deps should help avoid unnecessary
# conflicts when upgrading to the latest Coppy template.
dev = [
    # From Coppy:
    {include-group = "tests"},
    {include-group = "pre-commit"},
    {include-group = "audit"},
    {include-group = "nox"},
    'click',
    'hatch',
    'ruff',
]
mssql = [
    # NOTE: you will also need the driver, which is an OS level install.
    # See: tasks/odbc-driver-install
    'pyodbc',
]
# Used by nox
tests = [
    "arrow>=1.3.0",
    "flask>=3.0.3",
    "flask-bootstrap>=3.3.7.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-webtest>=0.1.6",
    "flask-wtf>=1.2.2",
    "openpyxl>=3.1.5",
    "psycopg[binary]>=3.2.9",
    "pyquery>=2.0.1",
    'pytest',
    'pytest-cov',
    "sqlalchemy-utils>=0.41.2",
    "xlsxwriter>=3.2.5",
]
# Used by nox
pre-commit = [
    # From Coppy:
    'pre-commit',
    'pre-commit-uv',
]
# Used by nox
audit = [
    # From Coppy:
    'pip-audit',
]
# Used by CI
nox = [
    'nox-uv',
]
